hw3/y.output
   0  $accept : exts $end

   1  exts : ext
   2       | exts ext

   3  ext : function_definition
   4      | declaration

   5  $$1 :

   6  function_definition : declaration_specifiers func_definitor $$1 compound_statement

   7  $$2 :

   8  function_definition : declaration_specifiers func_definitor declaration_list $$2 compound_statement

   9  $$3 :

  10  function_definition : func_definitor $$3 compound_statement

  11  $$4 :

  12  function_definition : func_definitor declaration_list $$4 compound_statement

  13  declaration_list : declaration
  14                   | declaration_list declaration

  15  $$5 :

  16  $$6 :

  17  compound_statement : '{' $$5 $$6 '}'

  18  $$7 :

  19  $$8 :

  20  compound_statement : '{' $$7 compound_list $$8 '}'

  21  compound_list : statement
  22                | declaration
  23                | compound_list statement
  24                | compound_list declaration

  25  statement : compound_statement
  26            | expression_statement
  27            | selection_statement
  28            | labeled_statement
  29            | iteration_statement
  30            | jump_statement

  31  labeled_statement : IDENTIFIER ':' statement
  32                    | CASE conditional_expression ':' statement
  33                    | DEFAULT ':' statement

  34  $$9 :

  35  selection_statement : IF '(' expression ')' $$9 compound_statement

  36  $$10 :

  37  selection_statement : selection_statement ELSE $$10 compound_statement

  38  $$11 :

  39  selection_statement : SWITCH '(' expression ')' $$11 compound_statement

  40  $$12 :

  41  iteration_statement : WHILE '(' expression ')' $$12 statement
  42                      | DO statement WHILE '(' expression ')' ';'
  43                      | FOR '(' expression_statement expression_statement ')' statement
  44                      | FOR '(' expression_statement expression_statement expression ')' statement

  45  jump_statement : CONTINUE ';'
  46                 | BREAK ';'
  47                 | RETURN ';'
  48                 | RETURN expression ';'

  49  expression_statement : ';'
  50                       | expression ';'

  51  declaration : declaration_specifiers ';'
  52              | declaration_specifiers init_declarator_list ';'

  53  declaration_specifiers : type_specifier
  54                         | type_specifier declaration_specifiers
  55                         | CONST declaration_specifiers

  56  type_specifier : VOID
  57                 | CHAR
  58                 | SHORT
  59                 | INT
  60                 | LONG
  61                 | FLOAT
  62                 | DOUBLE
  63                 | SIGNED
  64                 | UNSIGNED

  65  init_declarator_list : init_declarator
  66                       | init_declarator_list ',' init_declarator

  67  init_declarator : declarator
  68                  | func_definitor
  69                  | declarator '=' initializer

  70  $$13 :

  71  func_definitor : IDENTIFIER $$13 func_param_list

  72  $$14 :

  73  func_param_list : '(' $$14 parameter_type_list ')'
  74                  | '(' ')'

  75  declarator : direct_declarator

  76  direct_declarator : IDENTIFIER
  77                    | '(' declarator ')'
  78                    | direct_declarator '[' conditional_expression ']'

  79  parameter_type_list : parameter_list
  80                      | parameter_list ',' ELLIPSIS

  81  parameter_list : parameter_declaration
  82                 | parameter_list ',' parameter_declaration

  83  parameter_declaration : declaration_specifiers declarator
  84                        | declaration_specifiers

  85  initializer : assignment_expression
  86              | '{' initializer_list '}'
  87              | '{' initializer_list ',' '}'

  88  initializer_list : initializer
  89                   | initializer_list ',' initializer

  90  expression : assignment_expression
  91             | expression ',' assignment_expression

  92  assignment_expression : conditional_expression
  93                        | unary_expression assignment_operator assignment_expression

  94  assignment_operator : '='
  95                      | MUL_ASSIGN
  96                      | DIV_ASSIGN
  97                      | MOD_ASSIGN
  98                      | ADD_ASSIGN
  99                      | SUB_ASSIGN

 100  conditional_expression : logical_or_expression
 101                         | logical_or_expression '?' expression ':' conditional_expression

 102  logical_or_expression : logical_and_expression
 103                        | logical_or_expression OR_OP logical_and_expression

 104  logical_and_expression : inclusive_or_expression
 105                         | logical_and_expression AND_OP inclusive_or_expression

 106  inclusive_or_expression : exclusive_or_expression
 107                          | inclusive_or_expression '|' exclusive_or_expression

 108  exclusive_or_expression : and_expression
 109                          | exclusive_or_expression '^' and_expression

 110  and_expression : equality_expression
 111                 | and_expression '&' equality_expression

 112  equality_expression : relational_expression
 113                      | equality_expression EQ_OP relational_expression
 114                      | equality_expression NE_OP relational_expression

 115  relational_expression : shift_expression
 116                        | relational_expression '<' shift_expression
 117                        | relational_expression '>' shift_expression
 118                        | relational_expression LE_OP shift_expression
 119                        | relational_expression GE_OP shift_expression

 120  shift_expression : additive_expression
 121                   | shift_expression LEFT_OP additive_expression
 122                   | shift_expression RIGHT_OP additive_expression

 123  additive_expression : additive_expression '+' multiplicative_expression
 124                      | additive_expression '-' multiplicative_expression
 125                      | multiplicative_expression

 126  multiplicative_expression : multiplicative_expression '*' cast_expression
 127                            | multiplicative_expression '/' cast_expression
 128                            | multiplicative_expression '%' cast_expression
 129                            | cast_expression

 130  cast_expression : unary_expression
 131                  | '(' type_specifier ')' cast_expression

 132  unary_expression : postfix_expression
 133                   | INC_OP unary_expression
 134                   | DEC_OP unary_expression
 135                   | unary_operator cast_expression

 136  unary_operator : '&'
 137                 | '*'
 138                 | '+'
 139                 | '-'
 140                 | '~'
 141                 | '!'

 142  postfix_expression : primary_expression
 143                     | FUNCTION
 144                     | postfix_expression '[' expression ']'
 145                     | postfix_expression '(' ')'
 146                     | postfix_expression '(' argument_expression_list ')'
 147                     | postfix_expression INC_OP
 148                     | postfix_expression DEC_OP

 149  argument_expression_list : assignment_expression
 150                           | argument_expression_list ',' assignment_expression

 151  primary_expression : '(' expression ')'
 152                     | CONSTANT
 153                     | CCONSTANT
 154                     | FCONSTANT
 155                     | IDENTIFIER
 156                     | STRING_LITERAL

state 0
	$accept : . exts $end  (0)

	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	.  error

	exts  goto 12
	func_definitor  goto 13
	declaration  goto 14
	declaration_specifiers  goto 15
	type_specifier  goto 16
	function_definition  goto 17
	ext  goto 18


state 1
	func_definitor : IDENTIFIER . $$13 func_param_list  (71)
	$$13 : .  (70)

	.  reduce 70

	$$13  goto 19


state 2
	type_specifier : CHAR .  (57)

	.  reduce 57


state 3
	type_specifier : SHORT .  (58)

	.  reduce 58


state 4
	type_specifier : INT .  (59)

	.  reduce 59


state 5
	type_specifier : LONG .  (60)

	.  reduce 60


state 6
	type_specifier : SIGNED .  (63)

	.  reduce 63


state 7
	type_specifier : UNSIGNED .  (64)

	.  reduce 64


state 8
	type_specifier : FLOAT .  (61)

	.  reduce 61


state 9
	type_specifier : DOUBLE .  (62)

	.  reduce 62


state 10
	declaration_specifiers : CONST . declaration_specifiers  (55)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	.  error

	declaration_specifiers  goto 20
	type_specifier  goto 16


state 11
	type_specifier : VOID .  (56)

	.  reduce 56


state 12
	$accept : exts . $end  (0)
	exts : exts . ext  (2)

	$end  accept
	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	.  error

	func_definitor  goto 13
	declaration  goto 14
	declaration_specifiers  goto 15
	type_specifier  goto 16
	function_definition  goto 17
	ext  goto 21


state 13
	function_definition : func_definitor . $$3 compound_statement  (10)
	function_definition : func_definitor . declaration_list $$4 compound_statement  (12)
	$$3 : .  (9)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'{'  reduce 9

	declaration  goto 22
	declaration_specifiers  goto 23
	type_specifier  goto 16
	declaration_list  goto 24
	$$3  goto 25


state 14
	ext : declaration .  (4)

	.  reduce 4


state 15
	function_definition : declaration_specifiers . func_definitor $$1 compound_statement  (6)
	function_definition : declaration_specifiers . func_definitor declaration_list $$2 compound_statement  (8)
	declaration : declaration_specifiers . ';'  (51)
	declaration : declaration_specifiers . init_declarator_list ';'  (52)

	IDENTIFIER  shift 26
	';'  shift 27
	'('  shift 28
	.  error

	func_definitor  goto 29
	init_declarator_list  goto 30
	init_declarator  goto 31
	declarator  goto 32
	direct_declarator  goto 33


state 16
	declaration_specifiers : type_specifier .  (53)
	declaration_specifiers : type_specifier . declaration_specifiers  (54)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	IDENTIFIER  reduce 53
	';'  reduce 53
	','  reduce 53
	'('  reduce 53
	')'  reduce 53

	declaration_specifiers  goto 34
	type_specifier  goto 16


state 17
	ext : function_definition .  (3)

	.  reduce 3


state 18
	exts : ext .  (1)

	.  reduce 1


state 19
	func_definitor : IDENTIFIER $$13 . func_param_list  (71)

	'('  shift 35
	.  error

	func_param_list  goto 36


state 20
	declaration_specifiers : CONST declaration_specifiers .  (55)

	.  reduce 55


state 21
	exts : exts ext .  (2)

	.  reduce 2


state 22
	declaration_list : declaration .  (13)

	.  reduce 13


state 23
	declaration : declaration_specifiers . ';'  (51)
	declaration : declaration_specifiers . init_declarator_list ';'  (52)

	IDENTIFIER  shift 26
	';'  shift 27
	'('  shift 28
	.  error

	func_definitor  goto 37
	init_declarator_list  goto 30
	init_declarator  goto 31
	declarator  goto 32
	direct_declarator  goto 33


state 24
	function_definition : func_definitor declaration_list . $$4 compound_statement  (12)
	declaration_list : declaration_list . declaration  (14)
	$$4 : .  (11)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'{'  reduce 11

	declaration  goto 38
	declaration_specifiers  goto 23
	type_specifier  goto 16
	$$4  goto 39


state 25
	function_definition : func_definitor $$3 . compound_statement  (10)

	'{'  shift 40
	.  error

	compound_statement  goto 41


state 26
	func_definitor : IDENTIFIER . $$13 func_param_list  (71)
	direct_declarator : IDENTIFIER .  (76)
	$$13 : .  (70)

	';'  reduce 76
	','  reduce 76
	'='  reduce 76
	'('  reduce 70
	'['  reduce 76

	$$13  goto 19


state 27
	declaration : declaration_specifiers ';' .  (51)

	.  reduce 51


state 28
	direct_declarator : '(' . declarator ')'  (77)

	IDENTIFIER  shift 42
	'('  shift 28
	.  error

	declarator  goto 43
	direct_declarator  goto 33


state 29
	function_definition : declaration_specifiers func_definitor . $$1 compound_statement  (6)
	function_definition : declaration_specifiers func_definitor . declaration_list $$2 compound_statement  (8)
	init_declarator : func_definitor .  (68)
	$$1 : .  (5)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	';'  reduce 68
	','  reduce 68
	'{'  reduce 5

	declaration  goto 22
	declaration_specifiers  goto 23
	type_specifier  goto 16
	declaration_list  goto 44
	$$1  goto 45


state 30
	declaration : declaration_specifiers init_declarator_list . ';'  (52)
	init_declarator_list : init_declarator_list . ',' init_declarator  (66)

	';'  shift 46
	','  shift 47
	.  error


state 31
	init_declarator_list : init_declarator .  (65)

	.  reduce 65
